@@ -27,8 +27,12 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpSession;
 import javax.servlet.http.HttpSessionBindingEvent;
 import javax.servlet.http.HttpSessionBindingListener;
-import java.util.*;
-
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Enumeration;
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.Set;
 
 /**
  * Wrapper class that uses a Shiro {@link Session Session} under the hood for all session operations instead of the
@@ -38,10 +42,12 @@ import java.util.*;
  *
  * @since 0.2
  */
+@SuppressWarnings("checkstyle:MagicNumber")
 public class ShiroHttpSession implements HttpSession {
 
-    //TODO - complete JavaDoc
-
+    /**
+     * default session id name.
+     */
     public static final String DEFAULT_SESSION_ID_NAME = "JSESSIONID";
 
     private static final Enumeration EMPTY_ENUMERATION = new Enumeration() {
@@ -66,14 +72,15 @@ public class ShiroHttpSession implements HttpSession {
                 }
             };
 
-    protected ServletContext servletContext = null;
-    protected HttpServletRequest currentRequest = null;
-    protected Session session = null; //'real' Shiro Session
+    protected ServletContext servletContext;
+    protected HttpServletRequest currentRequest;
+    //'real' Shiro Session
+    protected Session session;
 
     public ShiroHttpSession(Session session, HttpServletRequest currentRequest, ServletContext servletContext) {
         if (session instanceof HttpServletSession) {
-            String msg = "Session constructor argument cannot be an instance of HttpServletSession.  This is enforced to " +
-                    "prevent circular dependencies and infinite loops.";
+            String msg = "Session constructor argument cannot be an instance of HttpServletSession.  This is enforced to "
+                    + "prevent circular dependencies and infinite loops.";
             throw new IllegalArgumentException(msg);
         }
         this.session = session;
@@ -115,7 +122,7 @@ public class ShiroHttpSession implements HttpSession {
 
     public int getMaxInactiveInterval() {
         try {
-            return (new Long(getSession().getTimeout() / 1000)).intValue();
+            return (Long.valueOf(getSession().getTimeout() / 1000)).intValue();
         } catch (InvalidSessionException e) {
             throw new IllegalStateException(e);
         }
